--- a/Autoregression.ipynb
+++ b/Autoregression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGgz3394KerL0pXo2KozvO",
+      "authorship_tag": "ABX9TyPu69Q9cIvcv4DEH8E4mXPA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,7 +106,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IaN53LpdBuP1",
-        "outputId": "9432fece-f5b3-4808-eee1-49421cb3183f"
+        "outputId": "f6e2b0e8-ffb7-45ac-cc0e-de6376b3afc3"
       },
       "execution_count": 3,
       "outputs": [
@@ -119,7 +119,7 @@
             "remote: Counting objects: 100% (4/4), done.\u001b[K\n",
             "remote: Compressing objects: 100% (4/4), done.\u001b[K\n",
             "remote: Total 74 (delta 0), reused 3 (delta 0), pack-reused 70 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (74/74), 1.12 MiB | 10.52 MiB/s, done.\n",
+            "Receiving objects: 100% (74/74), 1.12 MiB | 2.89 MiB/s, done.\n",
             "['lovecraftcorpus/alchemist.txt', 'lovecraftcorpus/arthur_jermyn.txt', 'lovecraftcorpus/azathoth.txt', 'lovecraftcorpus/beast.txt', 'lovecraftcorpus/beyond_wall_of_sleep.txt', 'lovecraftcorpus/book.txt', 'lovecraftcorpus/celephais.txt', 'lovecraftcorpus/charles_dexter_ward.txt', 'lovecraftcorpus/clergyman.txt', 'lovecraftcorpus/colour_out_of_space.txt', 'lovecraftcorpus/cool_air.txt', 'lovecraftcorpus/crawling_chaos.txt', 'lovecraftcorpus/cthulhu.txt', 'lovecraftcorpus/dagon.txt', 'lovecraftcorpus/descendent.txt', 'lovecraftcorpus/doorstep.txt', 'lovecraftcorpus/dreams_in_the_witch.txt', 'lovecraftcorpus/dunwich.txt', 'lovecraftcorpus/erich_zann.txt', 'lovecraftcorpus/ex_oblivione.txt', 'lovecraftcorpus/festival.txt', 'lovecraftcorpus/from_beyond.txt', 'lovecraftcorpus/gates_of_silver_key.txt', 'lovecraftcorpus/haunter.txt', 'lovecraftcorpus/he.txt', 'lovecraftcorpus/high_house_mist.txt', 'lovecraftcorpus/hound.txt', 'lovecraftcorpus/hypnos.txt', 'lovecraftcorpus/innsmouth.txt', 'lovecraftcorpus/iranon.txt', 'lovecraftcorpus/juan_romero.txt', 'lovecraftcorpus/kadath.txt', 'lovecraftcorpus/lurking_fear.txt', 'lovecraftcorpus/martins_beach.txt', 'lovecraftcorpus/medusas_coil.txt', 'lovecraftcorpus/memory.txt', 'lovecraftcorpus/moon_bog.txt', 'lovecraftcorpus/mountains_of_madness.txt', 'lovecraftcorpus/nameless.txt', 'lovecraftcorpus/nyarlathotep.txt', 'lovecraftcorpus/old_folk.txt', 'lovecraftcorpus/other_gods.txt', 'lovecraftcorpus/outsider.txt', 'lovecraftcorpus/pharoahs.txt', 'lovecraftcorpus/pickman.txt', 'lovecraftcorpus/picture_house.txt', 'lovecraftcorpus/poetry_of_gods.txt', 'lovecraftcorpus/polaris.txt', 'lovecraftcorpus/randolph_carter.txt', 'lovecraftcorpus/rats_walls.txt', 'lovecraftcorpus/reanimator.txt', 'lovecraftcorpus/redhook.txt', 'lovecraftcorpus/sarnath.txt', 'lovecraftcorpus/shadow_out_of_time.txt', 'lovecraftcorpus/shunned_house.txt', 'lovecraftcorpus/silver_key.txt', 'lovecraftcorpus/street.txt', 'lovecraftcorpus/temple.txt', 'lovecraftcorpus/terrible_old_man.txt', 'lovecraftcorpus/tomb.txt', 'lovecraftcorpus/tree.txt', 'lovecraftcorpus/ulthar.txt', 'lovecraftcorpus/unnamable.txt', 'lovecraftcorpus/vault.txt', 'lovecraftcorpus/what_moon_brings.txt', 'lovecraftcorpus/whisperer.txt', 'lovecraftcorpus/white_ship.txt']\n",
             "Corpus downloaded.\n"
           ]
@@ -166,12 +166,12 @@
       ],
       "metadata": {
         "id": "QLn9Hi-UCGcs",
-        "outputId": "82158cf8-a64e-429b-9e27-a4912e97fe05",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bb9cdcc3-0143-43f1-ccfc-8cf2a23c2e7a"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,13 +199,13 @@
         "print(vocabulary[:100])"
       ],
       "metadata": {
-        "id": "n9YifWZd8wu0",
-        "outputId": "f99c7b10-79ed-4e02-f5f2-084fa200e09e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "n9YifWZd8wu0",
+        "outputId": "b0db291d-36c3-424f-b866-eb57c97017d6"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,52 +240,157 @@
         "\n",
         "      for start_index in range(0,len(story)-sequence_length): # no overflow.\n",
         "          x = story[start_index:start_index + sequence_length]\n",
+        "          assert len(x) == sequence_length, \"Should not happen.\"\n",
         "          y = story[start_index + 1 :start_index + sequence_length+1]\n",
         "          assert len(y) == sequence_length , \"should not happen\"\n",
-        "      assert False\n",
+        "\n",
+        "          x_inputs += [x]\n",
+        "          y_outputs += [y]\n",
+        "\n",
+        "\n",
         "  # Done,\n",
-        "  return tf.data.Dataset.from_tensor_slices([x_inputs, y_outputs])\n",
+        "  return tf.data.Dataset.from_tensor_slices((x_inputs, y_outputs))\n",
         "\n",
         "\n",
         "dataset_train = create_dataset_for_autoregression(dataset_original_train)\n",
-        "#dataset_valid = create_dataset_for_autoregression(dataset_original_valid)"
+        "dataset_valid = create_dataset_for_autoregression(dataset_original_valid)"
       ],
       "metadata": {
-        "id": "FpPokyGL8t_r",
-        "outputId": "a71db27c-9937-4ee0-e737-0dcdbfea5465",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 340
-        }
+        "id": "FpPokyGL8t_r"
       },
-      "execution_count": 9,
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def decode(indices):\n",
+        "  return \" \".join([vocabulary[index] for index in indices if vocabulary[index] != \"\"])\n",
+        "\n",
+        "for input,output in dataset_train.take(20):\n",
+        "  print(decode(input))\n",
+        "  print(decode(output))\n",
+        "  print(\"\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z8QaNeuL70-j",
+        "outputId": "411e784e-6d07-4411-e168-7080b0eaceb9"
+      },
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[ 1 63  2 ...  0  0  0]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "AssertionError",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-9-935e3b112d28>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m \u001b[0mdataset_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_dataset_for_autoregression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset_original_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m \u001b[0;31m#dataset_valid = create_dataset_for_autoregression(dataset_original_valid)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-9-935e3b112d28>\u001b[0m in \u001b[0;36mcreate_dataset_for_autoregression\u001b[0;34m(dataset)\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mstory\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstories\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstory\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m       \u001b[0;32massert\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mstory\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstories\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m       \u001b[0mstory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstory\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mpadding_token_id\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# removes padding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAssertionError\u001b[0m: "
+            "\n",
+            "the\n",
+            "\n",
+            "the\n",
+            "the terrible\n",
+            "\n",
+            "the terrible\n",
+            "the terrible old\n",
+            "\n",
+            "the terrible old\n",
+            "the terrible old man\n",
+            "\n",
+            "the terrible old man\n",
+            "the terrible old man the\n",
+            "\n",
+            "the terrible old man the\n",
+            "the terrible old man the inhabitants\n",
+            "\n",
+            "the terrible old man the inhabitants\n",
+            "the terrible old man the inhabitants of\n",
+            "\n",
+            "the terrible old man the inhabitants of\n",
+            "the terrible old man the inhabitants of kingsport\n",
+            "\n",
+            "the terrible old man the inhabitants of kingsport\n",
+            "the terrible old man the inhabitants of kingsport say\n",
+            "\n",
+            "the terrible old man the inhabitants of kingsport say\n",
+            "the terrible old man the inhabitants of kingsport say and\n",
+            "\n",
+            "the terrible old man the inhabitants of kingsport say and\n",
+            "the terrible old man the inhabitants of kingsport say and think\n",
+            "\n",
+            "the terrible old man the inhabitants of kingsport say and think\n",
+            "the terrible old man the inhabitants of kingsport say and think many\n",
+            "\n",
+            "the terrible old man the inhabitants of kingsport say and think many\n",
+            "the terrible old man the inhabitants of kingsport say and think many things\n",
+            "\n",
+            "the terrible old man the inhabitants of kingsport say and think many things\n",
+            "the terrible old man the inhabitants of kingsport say and think many things about\n",
+            "\n",
+            "the terrible old man the inhabitants of kingsport say and think many things about\n",
+            "the terrible old man the inhabitants of kingsport say and think many things about the\n",
+            "\n",
+            "the terrible old man the inhabitants of kingsport say and think many things about the\n",
+            "the terrible old man the inhabitants of kingsport say and think many things about the terrible\n",
+            "\n",
+            "the terrible old man the inhabitants of kingsport say and think many things about the terrible\n",
+            "the terrible old man the inhabitants of kingsport say and think many things about the terrible old\n",
+            "\n",
+            "the terrible old man the inhabitants of kingsport say and think many things about the terrible old\n",
+            "the terrible old man the inhabitants of kingsport say and think many things about the terrible old man\n",
+            "\n",
+            "the terrible old man the inhabitants of kingsport say and think many things about the terrible old man\n",
+            "the terrible old man the inhabitants of kingsport say and think many things about the terrible old man which\n",
+            "\n",
+            "the terrible old man the inhabitants of kingsport say and think many things about the terrible old man which\n",
+            "the terrible old man the inhabitants of kingsport say and think many things about the terrible old man which generally\n",
+            "\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "def render_history(history):\n",
+        "    plt.title(\"Training loss vs. validation loss\")\n",
+        "    plt.plot(history.history[\"loss\"], label=\"loss\")\n",
+        "    plt.plot(history.history[\"val_loss\"], label=\"val_loss\")\n",
+        "    plt.legend()\n",
+        "    plt.show()\n",
+        "    plt.close()\n",
+        "\n",
+        "    plt.title(\"Training accuracy vs. validation accuracy\")\n",
+        "    plt.plot(history.history[\"accuracy\"], label=\"accuracy\")\n",
+        "    plt.plot(history.history[\"val_accuracy\"], label=\"val_accuracy\")\n",
+        "    plt.legend()\n",
+        "    plt.show()\n",
+        "    plt.close()"
+      ],
       "metadata": {
-        "id": "z8QaNeuL70-j"
+        "id": "aF86Ta92YmGy"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model"
+      ],
+      "metadata": {
+        "id": "Ej8L9ZnhY7Ua"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "embedding_size = 128\n"
+      ],
+      "metadata": {
+        "id": "-S3saQ4_AZKa"
       },
       "execution_count": null,
       "outputs": []
